--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
@@ -298,6 +298,12 @@ void func1(int n) {
 
 **`상태 공간트리` 를 그려가면서 문제를 이해하고, 재귀 형태로 풀어나가면 된다.**
 
+**`깊이우선검색(=DFS)`을 기반으로 검색을 진행하며, 각 마디가 유망하지 않으면 그 마디의 부모 마디로 돌아가서 다시 검색을 계속하는 방식이다.**
+
+* **참고 : `백트래킹` 은 깊이우선검색(DFS)을 기반으로 하지만, `분기한정법` 은 여러 검색 방법들을 지원하는 차이가 있다.**
+
+<br>
+
 **N과 M(1) - 대표적인 템플릿**
 
 ```c++
@@ -352,6 +358,27 @@ void func(int depth, int sum) {
 * 배열 범위는 `sort` 처럼 end쪽 주소는 배열 사이즈 크기의 주소
 
 ![image-20230429035204359](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230429035204359.png)
+
+<br><br>
+
+## Branch-and-Bound(분기한정법)
+
+**이건 이런게 있다란 개념만 이해해두자. [분기한정법-개념](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Branch-and-Bound(%EB%B6%84%EA%B8%B0%ED%95%9C%EC%A0%95%EB%B2%95)/)**
+
+* **분기한정법 : Backtracking +** **다른 탐색들(DFS,BFS,우선순위큐 등)**
+
+  * **Bound** : 마디가 유망한지 여부를 결정하기 위해서 한계치(bound) 계산
+
+  * **So far the best** : 현재까지 찾은 최적의 답
+
+* **최적화 문제의 SST 비교**
+
+  * 최적화 문제의 SST 비교 최소화 문제(예: TSP)
+    * 트리 깊어질수록 BOUND값이 절대 작아질 수 없음(Low Bound를 구함)
+
+
+  * 최적화 문제의 SST 비교 최대화 문제(예: 0-1냅색)
+    * 트리 깊어질수록 BOUND값이 절대 커질 수 없음(Upper Bound를 구함)
 
 <br><br>
 
@@ -1180,7 +1207,10 @@ else {
 
 ## 최소 신장 트리
 
-**https://blog.encrypted.gg/1024**
+* **바킹독 : https://blog.encrypted.gg/1024**
+* **예전에 정리한 개념글 : [MST-Prim,Kruskal](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Greedy-Algorithm(%ED%83%90%EC%9A%95%EC%A0%81%EC%9D%B8-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98)/#mst%EC%B5%9C%EC%86%8C%EB%B9%84%EC%9A%A9-%EC%8B%A0%EC%9E%A5%ED%8A%B8%EB%A6%AC)**
+
+<br>
 
 **크루스칼, 프림 알고리즘이 대표적**
 
@@ -1196,7 +1226,10 @@ else {
 
 ## 최단 경로 트리
 
-**https://blog.encrypted.gg/1035, https://blog.encrypted.gg/1037**
+* **바킹독 : https://blog.encrypted.gg/1035, https://blog.encrypted.gg/1037**
+* **예전에 정리한 개념글 : [Floyd](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Dynamic_Programming(%EB%8F%99%EC%A0%81%EA%B3%84%ED%9A%8D%EB%B2%95)/#%EC%B5%9C%EB%8B%A8%EA%B1%B0%EB%A6%ACfloyd), [Dijkstra](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Greedy-Algorithm(%ED%83%90%EC%9A%95%EC%A0%81%EC%9D%B8-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98)/#dijkstra%EB%8B%A4%EC%9D%B5%EC%8A%A4%ED%8A%B8%EB%9D%BC)**
+
+<br>
 
 **`플로이드 알고리즘`은 모든 정점 쌍 사이의 최단 경로를 구하는 알고리즘이라 O(n3)의 큰 복잡도를 가진다.  
 다만, 구현이 3중 for문으로 간단히 할 수 있으며 n이 1000정도면 이 알고리즘을 써도 된다.**
