--- a/_posts/Major/Algorithm_Concept/2022-01-28-(C언어)가우스 조르단 소거법.md
+++ b/_posts/Major/Algorithm_Concept/2022-01-28-(C언어)가우스 조르단 소거법.md
@@ -9,10 +9,17 @@ sidebar:
    nav: "docs"
 ---
 
-* 선형대 수학 과제
-* 가우스 조르단 소거법이란 연립일차방정식을 풀이하는 알고리즘이다.
+
+
+## Intro
+
+선형대 수학 과제
+
+* **가우스 조르단 소거법이란 연립일차방정식을 풀이하는 알고리즘**이다.
   * 삼각화를 하고나서, 대입을 통해서 x값을 구한다.
   * 결론적으로 Ax = B 식에서 x값을 최종적으로 구한다.
+
+<br><br>
 
 
 ## 소스
@@ -227,7 +234,7 @@ int main(void) {
 }
 ```
 
-
+<br><br>
 
 ## 실행화면
 
