--- a/_posts/Major/Algorithm_Concept/2022-12-27-(개념) 순차, 이분검색 & 피보나치 수(자세히).md
+++ b/_posts/Major/Algorithm_Concept/2022-12-27-(개념) 순차, 이분검색 & 피보나치 수(자세히).md
@@ -12,13 +12,13 @@ typora-root-url: ../../..
 
 
 
-## Intro..
+## Intro
 
 순차 검색, 이분 검색의 특징과 피보나치 수에대해 설명
 
 * 피보나치 수를 구하는 방식이 한가지가 아니며, 다른 방법도 알아보겠음
 
-<br>
+<br><br>
 
 ## 순차검색, 이분검색
 
@@ -29,7 +29,7 @@ typora-root-url: ../../..
   * 문제 : 크기가 n인 **정렬된 배열 S**에 x가 있는가?
   * 최악의 복잡도 : 전체를 절반 씩 찾아가서 순회하기 때문에 `logN`
 
-<br>
+<br><br>
 
 ## n번째 피보나치 수
 
@@ -39,7 +39,7 @@ typora-root-url: ../../..
 
 * 즉, 바로 앞에 2개의 숫자를 더한 값이 현재 값이 되는게 피보나치 수열이다.
 
-
+<br>
 
 ### 또 다른 방법
 
@@ -49,13 +49,13 @@ typora-root-url: ../../..
 
 * 이 공식을 이용하면 큰 숫자도 간단히 구할 수 있다.
 
-
+<br>
 
 **예제**
 
 ![image-20221227233925594](/images/2022-12-27-(개념) 순차, 이분검색 & 피보나치 수(자세히)/image-20221227233925594.png)
 
-
+<br>
 
 **풀이**
 
@@ -64,7 +64,11 @@ typora-root-url: ../../..
 * 참고로  0 1 행렬을 곱해주면 처음 n=199인 행렬에서 당연히 n=200이 행렬이 되는 특징을 이용
   			              1 1
 
+<br>
 
+**참고 : `200제곱x200제곱=400제곱` 이라는 단순한 수학계산이지만 이 아이디어로 복잡도를 대폭 줄이는 경우들이 존재하기 때문에 기억하고있으면 좋음**
+
+<br>
 
 ### 알고리즘 방식
 
