--- a/_posts/Major/Algorithm_Concept/2022-12-28-(개념) Sort(정렬).md
+++ b/_posts/Major/Algorithm_Concept/2022-12-28-(개념) Sort(정렬).md
@@ -12,7 +12,7 @@ typora-root-url: ../../..
 
 
 
-## Intro..
+## Intro
 
 다양한 정렬들이 있으며, 이들을 기본적으로 알아야 하기 때문에 공부한 것들을 정리해 보겠다.
 
@@ -35,7 +35,7 @@ typora-root-url: ../../..
   * **In-space** : QuickSort처럼 메인 메모리에 데이터를 담아둔 공간에서만 정렬을 진행하는 것들
   * **Not In-space** : Radix나 MergeSort(합병정렬)처럼 추가 메모리 공간을 사용하는 것들
 
-<br>
+<br><br>
 
 ## Exchange, Bubble, Insertion, Selection Sort
 
@@ -56,7 +56,7 @@ typora-root-url: ../../..
 * **복잡도 : 전부 최악 N^2**
   * **선택정렬은 최선의 복잡도가 N이란 점 참고**
 
-<br>
+<br><br>
 
 ## Radix, Bucket, Counting, Shell Sort
 
@@ -64,16 +64,16 @@ typora-root-url: ../../..
 
 * 맨 끝자리 기준으로 순서대로 통에 나눠 적고, 0번 통부터 다시 순서대로 배열 정리(끝자리 정렬)  
   그다음은 10자리 기준으로 반복(십의자리 정렬), 그다음은 100자리 기준으로 반복(전체 정렬 끝)
-
   * 통에 갓다오는 횟수 = 자리수 * n번(n은 통 개수)
-
   
+
+<br>
 
 <img src="C:\Users\KoBongHun\Desktop\Git\BH946.github.io\images\2022-12-28-(개념) Sort(정렬)\image-20221228005612383.png" alt="image-20221228005612383" style="zoom:80%;" />
 
 * 버킷들 각각이 알아서 정렬 후 이를 합하게 되는점이 기수(Radix)와의 차이점이다.
 
-
+<br>
 
 <img src="C:\Users\KoBongHun\Desktop\Git\BH946.github.io\images\2022-12-28-(개념) Sort(정렬)\image-20221228005652439.png" alt="image-20221228005652439" style="zoom:80%;" />
 
@@ -81,20 +81,20 @@ typora-root-url: ../../..
   * 따라서 주어진 입력이 얼만지 모르는 그런경우는 미리 카운트를 구해두질 못하니까 사용불가
   * 지금처럼 입력 배열이 저렇게 주어져야 구할수가 있음
 
-
+<br>
 
 <img src="C:\Users\KoBongHun\Desktop\Git\BH946.github.io\images\2022-12-28-(개념) Sort(정렬)\image-20221228005744571.png" alt="image-20221228005744571" style="zoom:80%;" />
 
 * 비교간격(Gap)을 큰 것 -> 점차 작은 것으로 변환하여 서로 떨어진 수를 swap
   * Gap이 3과 1인 상태를 수행하는 모습을 그림에서 볼 수 있음
 
-<br>
+<br><br>
 
 ## MergeSort(합병정렬)
 
 **합병(Merge), 합병정렬(Mergesort) 함수를 이용해 재귀형태로 구현**
 
-
+<br>
 
 ### 합병(Merge)
 
@@ -104,7 +104,7 @@ typora-root-url: ../../..
 
 ![image-20221228013515160](C:\Users\KoBongHun\Desktop\Git\BH946.github.io\images\2022-12-28-(개념) Sort(정렬)\image-20221228013515160.png)
 
-
+<br>
 
 ### 합병정렬(MergeSort)
 
@@ -122,7 +122,7 @@ typora-root-url: ../../..
   * 이는 제자리 정렬은 아니라는 의미
   * 다만, 이를 개선이 가능하다 (2n -> n으로 개선가능)
 
-
+<br>
 
 ### 공간복잡도 개선한 합병정렬
 
@@ -132,7 +132,7 @@ typora-root-url: ../../..
 
 * **변형된 Mergesort 함수**
 
-
+<br>
 
 ![image-20221228014154035](C:\Users\KoBongHun\Desktop\Git\BH946.github.io\images\2022-12-28-(개념) Sort(정렬)\image-20221228014154035.png)
 
@@ -142,11 +142,9 @@ typora-root-url: ../../..
 * 따라서 2n -> n으로 추가메모리 공간을 줄이는 개선을 보여준다.
   * 다만, 제자리정렬은 여전히 아니라는 점
 
-
-
 * **복잡도 : nlgn**
 
-<br>
+<br><br>
 
 ## QuickSort(퀵정렬)
 
@@ -157,7 +155,7 @@ typora-root-url: ../../..
 기준값이 무엇이든 상관없지만 예로 첫 번째 값을 기준값으로 선정해서,   
 그보다 작은 것은 왼쪽, 큰 것은 오른쪽으로 나누는게 핵심 아이디어
 
-
+<br>
 
 ### 빠른정렬(QuickSort)
 
@@ -167,7 +165,7 @@ typora-root-url: ../../..
 
 ![image-20221228015204421](/images/2022-12-28-(개념) Sort(정렬)/image-20221228015204421.png)
 
-
+<br>
 
 ### 분할(Partition)
 
@@ -182,13 +180,13 @@ typora-root-url: ../../..
 
 ![image-20221228015350865](/images/2022-12-28-(개념) Sort(정렬)/image-20221228015350865.png)
 
-
+<br>
 
 * **복잡도 : 최악의 복잡도는 n^2인데, 평균은 nlgn이다.**
   * 합병정렬이 최악이 nlgn이라서 좋긴 하지만, 메모리 측면에서는 제자리정렬인 퀵이 우수
   * 또한, 퀵은 최악 복잡도를 피하는 방법들이 존재
 
-
+<br>
 
 ### 최악 복잡도를 피할 수 있는 방법
 
@@ -197,7 +195,7 @@ typora-root-url: ../../..
 * **기준값 선택** – 맨앞, 중간, 맨뒤를 구해 3개 중 중간 값 사용방법
 * **미리** **shuffle** – 미리 n정도 복잡도를 사용해 섞어두면, 평균정도의 복잡도는 얻게 됨
 
-<br>
+<br><br>
 
 ## HeapSort(힙정렬)
 
@@ -209,7 +207,7 @@ typora-root-url: ../../..
 * Key(v)>=Key(child(v)) : 자식보다 키값 같거나 크다는 성질
   * 참고로 이것은 `Max Heap`을 의미
 
-
+<br>
 
 ### 힙 만드는 법
 
@@ -224,7 +222,7 @@ typora-root-url: ../../..
 참고로 k를 배열 인덱스로 보는게 핵심. 인덱스를 1부터!  
 또한, 배열로 봤을때 완전이진트리 자식을 찾아 가는 방식이 2k, 2k+1이라는 것
 
-
+<br>
 
 **Insertion힙 만드는 과정만 소개하겠다.**
 
@@ -232,7 +230,7 @@ typora-root-url: ../../..
 
 * 참고로 원본 배열 값 : [10, 7, 3, 1, 6, 12, 13, 15, 19]
 
-
+<br>
 
 ### 힙정렬
 
@@ -242,7 +240,7 @@ typora-root-url: ../../..
 
 * **복잡도 : Insertion, Adjust, Heapsort - nlgn**
 
-
+<br>
 
 ### 복잡도 상세 설명
 
@@ -252,13 +250,13 @@ typora-root-url: ../../..
   * 당연히 초기에 힙도 아니었을땐 힙 만드는건 Adjust로 nlgn인데, 그 후 맨끝과 루트 값만 서로바꾸고 한번 Adjust로 힙동작하는(lgn)거기 때문에 nlgn이라 볼수있고, 총 nlgn+nlgn=nlgn으로 복잡도를 정의.
 * Adjust가 nlgn이라 한것은, 그건 처음에 힙을 구성할때 쭉 뒤에부터접근해서 계속 힙만드는(lgn)을 반복해서 nlgn 이라는 것.  
 
-<br>
+<br><br>
 
 ## 합병, 힙 vs 퀵 정렬 비교
 
 **퀵 정렬을 많이 사용하는 이유가 궁금해서 구글링을 해보았다.**
 
-
+<br>
 
 ### 퀵 vs 힙
 
@@ -268,7 +266,7 @@ typora-root-url: ../../..
 
 * swap의 횟수 때문이라고 한다.
 
-
+<br>
 
 ### 퀵 vs 합병
 
