--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(백준_바킹독)1~11강 필수 문제모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(백준_바킹독)1~11강 필수 문제모음.md
@@ -68,14 +68,15 @@ typora-root-url: ../../..
 * **시뮬레이션**
   * [감시](https://www.acmicpc.net/problem/15683)
   * [스티커 붙이기](https://www.acmicpc.net/problem/18808)
-  * [2048 (Easy)](https://www.acmicpc.net/problem/12100) => 여기부터
+  * [2048 (Easy)](https://www.acmicpc.net/problem/12100) 
+    * 안푸러!!
   * [치킨 배달](https://www.acmicpc.net/problem/15686)
 * **정렬 I**
   * pass
 * **정렬 II**
   * [카드](https://www.acmicpc.net/problem/11652)
     * 정렬은 그냥 `STL` 제공 하는 `sort` 함수 권장
-* **다이나믹 프로그래밍**
+* **다이나믹 프로그래밍** => 여기부터
   * [1로 만들기](https://www.acmicpc.net/problem/1463)
   * [1,2,3 더하기](https://www.acmicpc.net/problem/9095)
   * [계단 오르기](https://www.acmicpc.net/problem/2579)
