--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
@@ -234,7 +234,7 @@ void bfs() {
 
 <br>
 
-**DFS : 큐->스택 변경시 동일하게 동작하며, 아래 그래프 쪽 파트에서 재귀 방식도 참고**
+**DFS : 큐->스택 변경시 동일하게 동작하며, 아래 그래프 쪽 파트에서 재귀 방식도 참고(백트래킹에서 많이 사용)**
 
 <br><br>
 
@@ -307,7 +307,8 @@ void func1(int n) {
 **N과 M(1) - 대표적인 템플릿**
 
 ```c++
-// N과 M(1) : 1부터 N까지 자연수 중에서 중복 없이 M개를 고른 수열
+// N과 M(1) : 1부터 N까지 자연수 중에서 `중복 없이(=visited 활용)` M개를 고른 수열
+// 즉, (1 2) (1 3) 은 가능하지만 (1 1)은 불가
 #include <bits/stdc++.h>
 using namespace std;
 
@@ -317,7 +318,7 @@ bool visited[10];
 
 void func(int depth) {
     if(depth == m) { // base condition
-        for(int i = 0 ; i<m; i++) cout << outArr[i] << ' ';
+        for(int i = 0 ; i<depth; i++) cout << outArr[i] << ' ';
         cout << '\n';
         return;
     }
@@ -334,6 +335,58 @@ void func(int depth) {
 
 <br>
 
+**N과 M 시리즈 - dfs 방식 백트래킹 사고력 확장**
+
+```c++
+// 참고 : 1~N 순서대로 자연수가 들어왔기 때문에 수열을 구하면 사전순(오름차순)으로 출력
+// 그러나, 랜덤 값이 들어온 경우엔 수열 구하기전에 sort작업이 필요
+
+// `i > preValue`로 구하는 값 오름차순 (즉, 현재값 > 이전값)
+for (int i = 1; i <= N; i++) {
+    if (!visited[i] && i > preValue) { // 만약 비내림차순은? `i>=preValue`
+        visited[i] = true;
+        outArr[depth] = i;
+        dfs(depth + 1, i);
+        visited[i] = false; // backtracking
+    }
+}
+
+// 1부터 N까지 자연수 중에서 `중복 허용(=visited 활용X)` M개를 고른 수열
+for (int i = 1; i <= N; i++) {
+    if (!visited[i]) {
+        //visited[i] = true;
+        outArr[depth] = i;
+        dfs(depth + 1);
+        //visited[i] = false; // backtracking
+    }
+}
+
+// 애초에 입력이 1 2 3 4 가 아닌 1 1 2 3 이런식으로 중복으로 들어올 경우 처리방법 소개
+// `tempNum != inArr[i]` 이 핵심
+int tempNum = 0; // 이전값 기록해둬서 중복 수열 생성되지 않도록 하기 위함
+for (int i = 1; i <= N; i++) {
+    if (!visited[i] && tempNum != inArr[i]) {
+        tempNum = inArr[i];
+        visited[i] = true;
+        outArr[depth] = inArr[i];
+        dfs(depth + 1, inArr[i]);
+        visited[i] = false;
+    }
+}
+
+// 마지막으로 시간초과를 해결하는 TIP => 아래 동작만 필요한 경우들에 사용!!
+for (int i = index; i < chicken.size(); i++) { // 반드시 index부터 시작해야 시간초과 안전
+    p = chicken[i];
+    if (visited[p.first][p.second]) continue;
+    visited[p.first][p.second] = true;
+    outArr[depth] = i; // 선택된 치킨집 index 기록
+    dfs(depth + 1, i); 
+    visited[p.first][p.second] = false; // backtracking
+}
+```
+
+<br>
+
 **부분수열의 합 - 응용(사고력 확장)**
 
 ```c++
@@ -342,7 +395,7 @@ void func(int depth) {
 // 하지만, 이 문제를 상태 트리 그려보면 값을 더한경우 안더한경우로 나눠 볼 수 있다.
 // 즉, 2개 형태로 재귀를 할 수 있고 훨씬 코드도 간결해진다.
 void func(int depth, int sum) {
-	if (depth == N) {
+	if (depth == N) { // base condition
 		if (sum == S) result++;
 		return;
 	}
@@ -358,6 +411,34 @@ void func(int depth, int sum) {
 * 배열 범위는 `sort` 처럼 end쪽 주소는 배열 사이즈 크기의 주소
 
 ![image-20230429035204359](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230429035204359.png)
+
+```c++
+// next_permutation : 순열을 나타낸다. do-while 형태로 사용
+// 조합 구하는 예시로 5C2를 예로 들면,
+// 만약 치킨집이 5개이고 M이 2라고 하면 brute는 {0, 0, 1, 1, 1} 로 0이 치킨집 2개 선택 의미
+void permutation() {
+	// 조합 구하기 위한 setting
+    // M=2라면, {0,0,1,1,1...}
+	vector<int> vc(chicken.size(), 1);
+	int brute[55];
+	for (int i = 0; i < chicken.size(); i++) brute[i] = 1; // 전체 1로 세팅후
+	for (int i = 0; i < M; i++) brute[i] = 0; // M개만큼 0으로 세팅
+	int mn = 10000000;
+	do {
+		int dist = 0;
+		for (auto h : home) {
+			int tmp = 10000000;
+			for (int i = 0; i < chicken.size(); i++) {
+				if (brute[i] == 0) // 선택된 경우
+					tmp = min(tmp, abs(chicken[i].first - h.first) + abs(chicken[i].second - h.second));
+			}
+			dist += tmp;
+		}
+		mn = min(mn, dist);
+	} while (next_permutation(&brute[0], &brute[chicken.size()]));
+	result = mn;
+}
+```
 
 <br><br>
 
@@ -418,7 +499,9 @@ void rotate() {
 
 **STL sort 이용 - O(NlogN)**
 
-* 응용을 예시 들면, 정렬 때 같은 수는 인접하는 성질을 이용해 중복 원소 제거도 가능
+* 응용을 예시 들면, 정렬 때 같은 수는 인접하는 성질을 이용해 **중복 원소 제거**도 가능
+  * **정렬은 아니지만 숫자를 바로 index와 매칭해서 받는 로직도 잘 기억**
+
 * 주의사항 : 혹시나 `string` 같은 클래스 객체 전달시 반드시 `reference` 를 사용
 
 ```c++
