--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(백준_바킹독)1~11강 필수 문제모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(백준_바킹독)1~11강 필수 문제모음.md
@@ -76,11 +76,11 @@ typora-root-url: ../../..
 * **정렬 II**
   * [카드](https://www.acmicpc.net/problem/11652)
     * 정렬은 그냥 `STL` 제공 하는 `sort` 함수 권장
-* **다이나믹 프로그래밍** => 여기부터
+* **다이나믹 프로그래밍** 
   * [1로 만들기](https://www.acmicpc.net/problem/1463)
   * [1,2,3 더하기](https://www.acmicpc.net/problem/9095)
   * [계단 오르기](https://www.acmicpc.net/problem/2579)
-  * [RGB 거리](https://www.acmicpc.net/problem/1149)
+  * [RGB 거리](https://www.acmicpc.net/problem/1149) => 여기부터
   * [2xn 타일링](https://www.acmicpc.net/problem/11726)
   * [구간 합 구하기 4](https://www.acmicpc.net/problem/11659)
   * [1로 만들기 2](https://www.acmicpc.net/problem/12852)
