--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(백준_바킹독)1~11강 필수 문제모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(백준_바킹독)1~11강 필수 문제모음.md
@@ -80,11 +80,12 @@ typora-root-url: ../../..
   * [1로 만들기](https://www.acmicpc.net/problem/1463)
   * [1,2,3 더하기](https://www.acmicpc.net/problem/9095)
   * [계단 오르기](https://www.acmicpc.net/problem/2579)
-  * [RGB 거리](https://www.acmicpc.net/problem/1149) => 여기부터
+  * [RGB 거리](https://www.acmicpc.net/problem/1149) 
+    * top-bottom, bottom-top 둘다 풀어봄
   * [2xn 타일링](https://www.acmicpc.net/problem/11726)
   * [구간 합 구하기 4](https://www.acmicpc.net/problem/11659)
   * [1로 만들기 2](https://www.acmicpc.net/problem/12852)
-* **그리디**
+* **그리디** => 여기부터
   * [동전 0](https://www.acmicpc.net/problem/11047)
   * [회의실배정](https://www.acmicpc.net/problem/1931)
   * [로프](https://www.acmicpc.net/problem/2217)
