--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
@@ -36,6 +36,10 @@ typora-root-url: ../../..
 * **따라서 반드시 아래 방식으로 사용해야한다 - O(N)**
   * `'a'` 만 생성되어서 `s` 에 더하기 때문에 `a` 만큼 길이만 추가로 필요하기 때문에 빠르다.
   * 물론 char[]을 써도 되지만 string이 매우 편리
+* **문자열이라기보단 memset, fill 메소드 설명**
+  * 배열이나 이런 숫자를 하나로 초기화하는 로직 작성은 하다보면 귀찮다.
+  * 이를 쉽게 해주는게 memset 함수와 fill 함수이며 fill 함수는 algorithm 선언이 필요하다.
+  * fill 함수를 사용하면 된다. memset은 0, -1 초기화에만 주로 사용한다. (정확히는 구글링참고)
 
 ```c++
 int main() {
@@ -782,6 +786,19 @@ sort(uni.begin(), uni.end()); // 정렬
 uni.erase(unique(uni.begin(), uni.end()), uni.end()); // 중복 제거
 for(int i = 0 ; i<n;i++) // 이분탐색
     cout << lower_bound(uni.begin(), uni.end(), x[i]) - uni.begin() << ' ';
+```
+
+<br>
+
+**좌표압축 다른 예**
+
+```c++
+// 문자 -> index로 변환 함수(좌표압축 함수)
+int getID(char c) { 
+	if (c <= 'Z')
+		return c - 'A';
+	return c - 'a' + 26; // 26은 A~Z 이후에 자리를 두기 위함
+} // 아스키코드는 A가 a보다 작음
 ```
 
 <br><br>
@@ -1678,6 +1695,120 @@ int main() {
 
 	cout << unionArea();
 
+	return 0;
+}
+```
+
+<br><br>
+
+## Network Flow(=Max-Flow, Min-Cut, 이분 매칭)
+
+**Ford-Fulkerson(DFS.복잡도:flow), Edmonds-Karp(BFS.복잡도:VE^2), Dinic's Algorithm(BFS,DFS.복잡도:EV^2) 가 있으며 여기서 Dinic's 만 암기해도 충분**
+
+* Ford-Fulkerson과 Edmonds-Karp는 DFS, BFS만 다르며 나머지는 로직이 정확히 동일
+* **Dinic's** 는 BFS,DFS 뭘 쓰든 상관없는데 본인은 **BFS로 레벨트리 구하고, DFS(재귀)로 연산을 진행**
+* **중요한 점**
+  * **"이분 매칭" 문제를 "Max-Flow" 문제로 치환해서 풀 수 있다.**
+  * **"Min-Cut" 문제는 그냥 "Max-Flow" 로 풀었을 때 답과 동일하다.**
+  * **보통 문제를 푸는 방식은 문제에 적합하게 "그래프" 를 설계한 후 풀어나간다.**
+
+<br>
+
+```c++
+/*
+BOJ 14286 문제. Min-Cut 문제 => "Max-Flow"
+*/
+#include<iostream>
+#include<vector> // tree
+#include<queue> // bfs
+#include<algorithm> // fill
+#define INF 987654321
+using namespace std;
+
+int c[505][505]; // 용량
+int f[505][505]; // 유량
+vector<int> vc[505]; // tree
+int level[505]; // 레벨 그래프
+int work[505];
+
+int N, M, S, T; // 정점 수, 에지 수, 시작 노드, 끝 노드
+
+bool bfs() {
+	// init
+	fill(level, level + 505, -1);
+	queue<int> qu; // bfs
+	level[S] = 0;
+	qu.push(S);
+	while (!qu.empty()) {
+		int cur = qu.front();
+		qu.pop();
+
+		for (int i = 0; i < vc[cur].size(); i++) {
+			int nxt = vc[cur][i];
+			if (c[cur][nxt] <= f[cur][nxt] || level[nxt] != -1) continue;
+			// 레벨이 아직 정해지지 않았고 잔여용량이 0이상은 계속 진행
+			level[nxt] = level[cur] + 1; // level 기록 (그냥 깊이 기록임)
+			qu.push(nxt);
+		}
+	}
+	return level[T] != -1; // -1 이면 false 반환(종료 의미)
+}
+
+int dfs(int cur, int flow) {
+	// base condition
+	if (cur == T) return flow; // cur -> depth로 이해
+
+	for (int i = work[cur]; i < vc[cur].size(); i++) {
+		int nxt = vc[cur][i];
+		if (level[nxt] - level[cur] != 1 || c[cur][nxt] <= f[cur][nxt]) continue;
+		// 레벨 차가 1이고, 잔여용량이 0이상은 계속 진행
+
+		// 최소 유량 탐색
+		int minF = dfs(nxt, min(c[cur][nxt] - f[cur][nxt], flow));
+
+		// 유량 update
+		if (minF > 0) {
+			f[cur][nxt] += minF;
+			f[nxt][cur] -= minF;
+			work[cur] = i; // index 기록해서 시간 단축
+			return minF;
+		}
+	}
+	work[cur] = vc[cur].size();
+	return 0;
+}
+
+int main() {
+	// speed up
+	ios::sync_with_stdio(0);
+	cin.tie(0);
+
+	// input
+	cin >> N >> M;
+	int n1, n2, w;
+	for (int i = 0; i < M; i++) {
+		cin >> n1 >> n2 >> w;
+		vc[n1].push_back(n2);
+		vc[n2].push_back(n1); // 양방향
+		c[n1][n2] += w; // 양방향 간선이므로, 양쪽으로 용량 할당
+		c[n2][n1] += w;
+	}
+	cin >> S >> T;
+
+	// run
+	int maximumFlow = 0; // 제거된 최소 간선 가중치 합
+	while (true) {
+		if (!bfs()) break; // 종료
+
+		fill(work, work + 505, 0);
+		int flow = dfs(S, INF);
+
+		// 최대 유량 update
+		maximumFlow += flow;
+	}
+
+	// output
+	cout << maximumFlow;
 	return 0;
 }
 ```
