--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
@@ -1703,7 +1703,7 @@ int main() {
 
 ## Network Flow(=Max-Flow, Min-Cut, 이분 매칭)
 
-**Ford-Fulkerson(DFS.복잡도:flow), Edmonds-Karp(BFS.복잡도:VE^2), Dinic's Algorithm(BFS,DFS.복잡도:EV^2) 가 있으며 여기서 Dinic's 만 암기해도 충분**
+**Ford-Fulkerson(DFS.복잡도:flow), Edmonds-Karp(BFS.복잡도:VE^2), Dinic's Algorithm(BFS,DFS.복잡도:EV^2) 가 있으며 여기서 `Dinic's` 만 암기해도 충분**
 
 * Ford-Fulkerson과 Edmonds-Karp는 DFS, BFS만 다르며 나머지는 로직이 정확히 동일
 * **Dinic's** 는 BFS,DFS 뭘 쓰든 상관없는데 본인은 **BFS로 레벨트리 구하고, DFS(재귀)로 연산을 진행**
@@ -1711,6 +1711,15 @@ int main() {
   * **"이분 매칭" 문제를 "Max-Flow" 문제로 치환해서 풀 수 있다.**
   * **"Min-Cut" 문제는 그냥 "Max-Flow" 로 풀었을 때 답과 동일하다.**
   * **보통 문제를 푸는 방식은 문제에 적합하게 "그래프" 를 설계한 후 풀어나간다.**
+    * **"그래프" 그리는 TIP**
+      * 그래프에는 **에지**를 그릴텐데 반드시 유량이 아닌 **용량**을 적어줄 것
+        * 햇갈리면 안되는게 **유량은 나중에** 계산할때 값 생기기 시작
+      * **멀티 Source, Sink**의 경우?? 외부에 **S, T 노드를 임의로 추가**해서 사용
+        * Max Flow는 S->T 로 흐르는 최대 유량을 구하는 형태이기 때문
+        * 임의로 S, T를 추가했으므로 그래프 그릴때 용량을 잘 설정해야함
+      * 복잡한 문제들은 **에지를 안주고** 직접 에지를 **구해야** 할때도 존재
+        * **예시 문제 : [Jerry and Tom](https://www.acmicpc.net/problem/14750)**
+        * 참고 : 해당 예시에서는 에지를 직접 구해야하며, 해당 에지는 "선분교차" 여부에 따라 구해진다.
 
 <br>
 
