--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -12,8 +12,6 @@ typora-root-url: ../../..
 
 
 
-
-
 # Intro..
 
 **사용할 알고리즘들의 템플릿들을 정리하겠다.**
@@ -138,7 +136,7 @@ Integer.toString(300); // Int -> Str
 
 <br>
 
-**c++ string에서 `split` 함수는 지원하지 않으므로 직 접 구 현**
+**한번에 초기화하는 fill 메소드 - Arrays, Collections**
 
 ```java
 int[] myArray = new int[10];
@@ -149,9 +147,80 @@ Collections.fill(myList, null); // null로 init
 
 <br><br>
 
-https://velog.io/@hygge/Java-%EC%BD%94%EB%94%A9%ED%85%8C%EC%8A%A4%ED%8A%B8-%EB%AC%B8%EB%B2%95-%EC%86%8D%EC%84%B1-%EC%A0%95%EB%A6%AC
+## Array, List(ArrayList)
+
+**List는 인터페이스라서 ArrayList(클래스) 로 구현, Array는 우리가 잘 아는 그 배열이다.**
+
+**Array와 List의 차이는 정적, 동적 길이란 차이가 있고 `length, size()` 를 쓰는 차이도 있다.**
+
+* **참고로 String은 `length()`**
+
+```java
+// Array init
+int arr[] = {0,1,2}; // length:3
+int[] arr = new int[3]; // length:3
+
+// ArrayList init
+ArrayList<String> arrayList = new ArrayList<>(Arrays.asList("apple", "banana"));
+List<Integer> list = new ArrayList<>(); 
+// method
+list.add(값), list.get(index), list.set(index, 값), list.remove(index), list.remove(값), list.removeAll(list2) 등등
+    
+// 문자열 배열을 List로 변환
+String[] temp = "abcde";
+List<String> list = new ArrayList<>(Arrays.asList(temp));
+
+// List를 문자열 배열로 변환
+List<String> list = new ArrayList<>();
+String[] temp = list.toArray(new String[list.size()]);
+
+// 정수 배열을 List로 변환
+int[] temp = { 123, 789, 456 };
+List<Integer> list = new ArrayList<>(Arrays.asList(temp));
+
+// List를 정수 배열로 변환
+List<Integer> list = new ArrayList<>();
+int[] temp = list.stream().mapToInt(i->i).toArray();
+```
+
+<br><br>
+
+## Collections
+
+**Array말고 List쪽의 메소드라 볼 수 있다.**
+
+```java
+int[] arr = { 123, 789, 456 }; // array
+List<Integer> list = new ArrayList<>(Arrays.asList(arr)); // array to list(arraylist)
+
+Collections.max(list)
+Collections.min(list)
+Collections.sort(list) // asc
+Collections.sort(list, Collections.reverseOrder()) // desc
+Collections.reverse(list) // { 456, 789, 123 }
+
+Collections.frequency(list, 123) // 123 요소 개수 반환
+Collections.binarySearch(list, 123) // 이분검색(못찾을때 좀 특이)
+// 없으면 123보다 큰 최초의 위치를 찾아서 -1을 곱하고 1을 빼서 반환 (-4)
+```
+
+<br><br>
+
+
+
+
+
+
+
+
 
 https://velog.io/@ryusuz/JAVA-%EC%BD%94%EB%94%A9%ED%85%8C%EC%8A%A4%ED%8A%B8%EC%9A%A9-%EC%A3%BC%EC%9A%94-%ED%95%A8%EC%88%98-%EB%AA%A8%EC%9D%8C
+
+https://velog.io/@alstjdwo1601/Java-%EC%BD%94%EB%94%A9%ED%85%8C%EC%8A%A4%ED%8A%B8-%EA%B4%80%EB%A0%A8-%ED%8C%81
+
+
+
+
 
 
 
