--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -25,6 +25,10 @@ typora-root-url: ../../..
 
 # Template
 
+**반드시 백준에 제출할 때는 클래스명 : Main**
+
+**package는 꼭 주석 or 제거**
+
 ```java
 // 포괄적인 라이브러리 선언
 import java.util.*;
@@ -49,7 +53,7 @@ import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.util.StringTokenizer;
 
-public class main {
+public class Main {
 	static int[][] arr = new int[301][301];
 
 	public static void main(String[] args) throws IOException {
@@ -95,6 +99,9 @@ public class main {
 * **한번에 초기화하는 fill 메소드 설명**
   * 배열, 리스트 - **`Arrays.fill(), Collections.fill()`**
 * `String` 변경 불가, `StringBuilder` 변경 가능
+* `parseInt()` : `String` -> `int`
+  * `intValue()` : `Integer` -> `int`
+
 
 ```java
 // 1. O(N^2) 복잡도 코드
@@ -181,6 +188,16 @@ List<Integer> list = new ArrayList<>(Arrays.asList(temp));
 // List를 정수 배열로 변환
 List<Integer> list = new ArrayList<>();
 int[] temp = list.stream().mapToInt(i->i).toArray();
+
+// 중복없이 값을 넣고 싶을 때 (원래는 sort후 중복 무시하는 형태로 얻었었는데, 좀 귀찮았음)
+if (list.indexOf(value) < 0) {	// 없으면 -1 리턴
+	list.put(value);
+}
+
+// 리스트 값 하나씩 가져올 때 (int 일 경우)
+for(int i = 0; i < list.size(); i++) {
+	list.get(i).intValue();
+}
 ```
 
 <br><br>
@@ -206,11 +223,26 @@ Collections.binarySearch(list, 123) // 이분검색(못찾을때 좀 특이)
 
 <br><br>
 
+## 자를 때(분할할 때)
 
+**특정 정수를 자를 때**
 
+```java
+// remain에 자른 정수를 담음
+while(value != 0) { // ex : 123 -> 12 -> 1 -> 0
+    remain = value % 10; // 123%10=3 -> 12%10=2 -> 1%10 = 1
+    value /= 10; // 123/10=12 -> 12/10=1 -> 1/10=0
+}
+```
 
+<br>
 
+**스트링처럼 split이나 substring을 배열에서 하려면?**
 
+```java
+str.substring(3,5); String[] arr = str.split(""); // String의 경우
+Arrays.copyOfRange(원본배열, 시작, 끝); // 배열의 경우
+```
 
 
 
@@ -222,7 +254,7 @@ https://velog.io/@alstjdwo1601/Java-%EC%BD%94%EB%94%A9%ED%85%8C%EC%8A%A4%ED%8A%B
 
 
 
-
+<br><br>
 
 ## BFS, DFS
 
@@ -230,38 +262,86 @@ https://velog.io/@alstjdwo1601/Java-%EC%BD%94%EB%94%A9%ED%85%8C%EC%8A%A4%ED%8A%B
 
 * **BFS를 우선**으로 사용하며, DFS는 DFS로만 풀리는 문제에 사용하면 된다.
 * **BFS는 큐** 를 활용하고, **DFS는 스택 또는 재귀(필자는 주로 재귀)**를 활용한다.
-* **주의할점은 BFS에서 큐에 집어넣는 시점에 방문기록을 남긴다.**
+* **주의할점은 BFS는 방문기록을 큐에 집어넣는 시점에 남겨야 한다.**
 
 <br>
 
 **BFS 기본형태 4방향**
 
 ```c++
+// BOJ 1926번 : 그림
 // 입력이 좌상을 0,0 으로 좌표계 형성하게끔 들어왔다 가정
-int dx[4] = { 0, 1, 0, -1 }; // 행 : 우,하,좌,상
-int dy[4] = { 1, 0, -1, 0 }; // 열 : 우,하,좌,상
-void bfs(int x, int y) {
-	queue<pair<int, int>> qu;
-	visited[x][y] = true; // 방문 표시 (x,y는 처음 BFS 순회할 좌표)
-	qu.push({ x, y });
+public class test { 
+    static int[] dx = {0,1,0,-1}; // 행 : 우,하,좌,상
+    static int[] dy = {1,0,-1,0}; // 열 : 우,하,좌,상
+    static boolean[][] visited = new boolean[505][505];
+    static int N;
+    static int M;
+    static int[][] inArr = new int[505][505];
+    static int resultTemp;
 
-	while (!qu.empty()) {
-		int cx = qu.front().first;
-		int cy = qu.front().second;
-		qu.pop();
+    public static void bfs(int x, int y) {
+        Queue<Pair> qu = new LinkedList<>(); // LinkedList 로 선언해야함
+        visited[x][y] = true; // 방문 표시
+        qu.add(new Pair(x,y)); // push
 
-		for (int i = 0; i < 4; i++) {
-			int nx = cx + dx[i];
-			int ny = cy + dy[i];
-			if (nx<0 || ny<0 || nx>N-1 || ny > M-1) continue; // 범위 내 체크
-			if (visited[nx][ny]) continue; // 방문 여부 체크
-			if (inArr[nx][ny] == 1) {
-				// 땅이 있는 경우(=1) 스택에 추가한다.
-				visited[nx][ny] = true; // 방문 표시
-				qu.push({ nx,ny });
-			}
-		}
-	}
+        while(!qu.isEmpty()) {
+            int cx = qu.peek().first; // front
+            int cy = qu.peek().second;
+            resultTemp++;
+            qu.remove(); // pop
+
+            for (int i=0; i<4; i++){
+                int nx = cx + dx[i];
+                int ny = cy + dy[i];
+                if(nx<0 || ny<0 || nx>N-1 || ny>M-1) continue; // 범위 내 체크
+                if(visited[nx][ny]) continue; // 방문 여부 체크
+                if(inArr[nx][ny] == 1) {
+                    // 땅이 있는 경우(=1) 큐에 추가
+                    visited[nx][ny] = true; // 방문 표시
+                    qu.add(new Pair(nx,ny));
+                }
+            }
+        }
+    }
+
+    public static void main(String[] args) throws IOException {
+        // input
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        StringTokenizer stk = new StringTokenizer(br.readLine(), " ");
+        N = Integer.parseInt(stk.nextToken());
+        M = Integer.parseInt(stk.nextToken());
+        for (int i = 0 ; i< N ; i++){
+            stk = new StringTokenizer(br.readLine(), " ");
+            for(int j = 0 ; j< M; j++){
+                inArr[i][j] = Integer.parseInt(stk.nextToken());
+            }
+        }
+        // run
+        int resultMax = 0;
+        int resultCount = 0;
+        for(int i = 0; i<N;i++){
+            for(int j = 0 ; j<M;j++){
+                if(visited[i][j] || inArr[i][j] == 0) continue;
+                resultTemp = 0; // 넓이 변수
+                bfs(i, j); // 0,0 시작
+                resultMax = Math.max(resultMax, resultTemp);
+                resultCount++;
+            }
+        }
+        System.out.println(resultCount);
+        System.out.println(resultMax);
+    }
+
+    static class Pair {
+        int first;
+        int second;
+
+        public Pair(int first, int second) {
+            this.first = first;
+            this.second = second;
+        }
+    }
 }
 ```
 
@@ -331,6 +411,7 @@ void bfs() {
 			int ny = cy + dy[i];
 			// 범위 내 체크
 			if (nx<0 || ny<0 || nx>N - 1 || ny > M - 1) {
+                // 이곳은 범위 밖 임을 의미
 				// 불보다 먼저인지 체크
 				// dist2[cx][cy] == -1 의 의미는 F(불)이 사방에 갇혀서 못나온 경우다.
 				if (dist1[cx][cy] < dist2[cx][cy] || dist2[cx][cy] == -1) {
@@ -409,10 +490,15 @@ void bfs() {
 ​	**3. 재귀 식**
 
 ```c++
-void func1(int n) {
+static StringBuilder sb = new StringBuilder(); // 문자열 기록
+public static void func(int n){
     if(n==0) return; // base condition
-    cout << n << ' ';
-    func1(n-1);
+    sb.append(n+" ");
+    func(n-1); // 재귀
+} 
+public static void main(String[] args) throws IOException {
+    func(5);
+    System.out.println(sb); // 출력
 }
 ```
 
